--- a/Lesson 20/navbarinline-block.css
+++ b/Lesson 20/navbarinline-block.css
@@ -12,8 +12,9 @@ body {
 }
 
 .navbar {
-    background-color: #ddd388;
+    background-color:rgb(195, 135, 57);
     text-align: right;
+    box-shadow: 5px 5px rgb(168, 102, 15);
 }
 
 .navbar li {
@@ -23,7 +24,7 @@ body {
 }
 
 .navbar a {
-    color: rgb(168, 102, 15);
+    color:  rgb(100, 64, 22);
 }
 
 .navbar a:hover {
