--- a/Lesson 20/navbarinline-block.css
+++ b/Lesson 20/navbarinline-block.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Gabarito", sans-serif;
+    font-family: "DM Serif Text", serif;
 
 }
 
@@ -25,6 +25,7 @@ body {
 
 .navbar a {
     color:  rgb(100, 64, 22);
+    text-shadow: 3px 3px #ba8787;
 }
 
 .navbar a:hover {
