--- a/Lesson 20/V1/does.css
+++ b/Lesson 20/V1/does.css
@@ -3,7 +3,23 @@ body{
         font-optical-sizing: auto;
         font-weight: 400;
         font-style: normal;
+        color: #98a6ad;
         
+}
+
+section {
+    text-align: center;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    
+}
+
+h1,h2,h3,h4 {
+    color: #505458;
 }
 
 h2 {
@@ -11,11 +27,78 @@ h2 {
         font-optical-sizing: auto;
         font-weight: 800;
         font-style: normal;
+        text-transform: uppercase;
+        line-height: 1.3;
+        margin: 20px 10px;
 }
 
-h2 {
+h3 {
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 200;
+    font-weight: 400;
     font-style: normal;
+    order: -1;
+    text-transform: uppercase;
+    line-height: 1.2;
+    margin: 10px0 10px;
+    
+}
+
+h4 {
+    line-height: 1.7;
+    font-size: 20px;
+    font-weight: 800;
+    margin: 20px 0 10px 0;
+    
+}
+
+p {
+    margin: 10px 0 16px;
+    font-size: 15px;
+}
+
+ol {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+     
+}
+
+ol li {
+    width: 30%;  
+    
+}
+
+.list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column-reverse;
+
+}
+
+svg {
+    width: 60px;
+    fill: #505458;
+    padding: 20px;
+
+    background-color: rgba(31, 97, 235, 0.15);
+    border-bottom-left-radius: 50% 74%;
+    border-bottom-right-radius: 50% 80%;
+    border-top-left-radius: 28% 26%;
+    border-top-right-radius: 72% 20%;
+   
+}
+
+.svg-1 {
+    background-color: rgba(31, 97, 235, 0.15);
+}
+
+.svg-2 {
+    background-color: rgba(28, 225, 172, 0.15)
+}
+
+.svg-3 {
+    background-color: rgba(255, 194, 18, 0.15)
 }
