--- a/Lesson 29/style.css
+++ b/Lesson 29/style.css
@@ -1,24 +1,83 @@
-body { margin:0;}
+body { margin: 0;
+        overflow: hidden;}
 
 iframe {
     position: absolute;
-    z-index: -1;
+    
 }
 
 label {
     position: absolute;
+    z-index: 1;
     bottom: 2%;
+    transition: 0.5s;
+}
+
+input {
+    display: none;
 }
 
 div {
    position: absolute;
    bottom: -28%;
-   height: 30%;
+   height: 20%;
    width: 100%;
-   background: green;
+   background-color: #b099cc;
+   transition: 0.5s;
 }
 
 section:has(input:checked) div {
     bottom: 0;
+
+}
+.lucide-circle-x {
+    display: none;
+}
+
+section:has(input:checked) label {
+    bottom: 22%;
+}
+
+section:has(input:checked) .lucide-circle-x {
+    display: inline-block;
+}
+
+section:has(input:checked) .lucide-settings {
+    display: none;
+}
+
+.audio-player {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
+    border-radius: 10px;
+    padding: 0px;
+    margin-top: 20px;
+    
+    
+
+   
+}
+
+.soundbuttons {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+       
+            
+}
+
+.audio-player button {
+    background-color: #7ccde9;
+    border: none;
+    color: white;
+    padding: 0px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 8px 2px ;
+    border-radius: 5px;
+    cursor: pointer;
 }
