--- a/Lesson 34/Navbar-CSS-Grid/style.css
+++ b/Lesson 34/Navbar-CSS-Grid/style.css
@@ -16,7 +16,33 @@ body {
     display: grid;
 
     grid-template-columns: repeat(12,1fr);
-    grid-template-rows: 1fr 2fr;
+    grid-template-rows: 1fr 2fr auto;
+}
+
+.navbar .dropdown {
+    display: none;
+    grid-row: 3;
+    grid-column: 2 /12;
+}
+
+.navbar .options {
+    background-color: #555;
+    display: none;
+    grid-row: 3;
+    grid-column: 11 /12;
+}
+.navbar .options:target {
+    display: block;
+}
+
+.navbar .options a {
+    color: white;
+    padding: 10%;
+    display: inline-block;
+}
+
+.navbar .dropdown:target {
+    display: block;
 }
 
 .navbar .nav {
@@ -28,6 +54,11 @@ body {
     grid-template-columns: repeat(10, 1fr);
 
     padding: 1%;
+}
+
+.navbar .nav,
+.navbar .top {
+    align-items: center;
 }
 
 .navbar .nav a:not(:first-child),
@@ -49,10 +80,13 @@ body {
 
 .navbar .nav .brand {
     grid-column: 1 / 5;
+    align-self: stretch;
 }
 
 .navbar .nav .brand img {
     height: 75%;
+    position: relative;
+    top: 12.5%
 }
 
 .navbar .top {
