BS-simple-navbar

--- a/prod/bs_5/style.scss
+++ b/prod/bs_5/style.scss
@@ -2,3 +2,10 @@
 @import 'bootstrap-scss/scss/functions';
 @import 'variables.scss';
 @import 'bootstrap-scss/scss/bootstrap.scss';
+
+.navbar {
+    
+    a {
+        color: white !important;
+    }
+}
